--- a/style.css
+++ b/style.css
@@ -12,23 +12,20 @@
   flex-direction: column;
   background-color: #eaeaea;
 }
-.box{
+#box{
   padding: 5rem;
-  border: 4px solid #919191;
-  box-shadow: #999 8px 8px 20px;
+  border: 2px solid;
   border-radius: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #fff;
 }
 h1{
   text-align: center;
   font-family: "Lobster", serif;
   font-size: 5rem;
   margin-bottom: 3rem;
-  color: #2f3849;
 }
 .iconDiv{
   font-size: 5rem;
@@ -39,5 +36,4 @@ p{
   font-family: 'Roboto', sans-serif;
   font-size: 3rem;
   font-weight: 600;
-  color: #2f3849;;
 }
